[package]
name = "hello_world" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Kacper Marczewski"]
description = "A short description of my package"

[dependencies]
postgres = "0.19.12"

[[bin]]
name = "test1"

[[bin]]
name = "test2"

[[bin]]
name = "test3"

[[bin]]
name = "postgres"